--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -44,5 +44,6 @@ jobs:
         uses: JamesIves/github-pages-deploy-action@v4
         with:
           # 部署文档
-          branch: gh-pages
+          token: ${{ secrets.ACCESS_TOKEN }}
+          branch: blog
           folder: src\.vuepress\dist
