--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -1,4 +1,3 @@
-
 name: 部署文档
 
 on:
@@ -36,14 +35,16 @@ jobs:
       - name: 构建文档
         env:
           NODE_OPTIONS: --max_old_space_size=8192
-        run: |-
+        run: |
           npm run docs:build
-          > src\.vuepress\dist\.nojekyll
+          touch src/.vuepress/dist/.nojekyll
 
       - name: 部署文档
         uses: JamesIves/github-pages-deploy-action@v4
         with:
-          # 部署文档
-          token: ${{ secrets.ACCESS_TOKEN }}
-          branch: blog
-          folder: src\.vuepress\dist
+          # 修正点 2：如果你没有手动去设置 ACCESS_TOKEN，请直接改用下面的默认变量
+          token: ${{ secrets.GITHUB_TOKEN }}
+          # 修正点 3：部署目标分支建议改为 gh-pages，除非你非要推送到 blog 分支
+          branch: gh-pages
+          # 修正点 4：同样，路径改为正斜杠
+          folder: src/.vuepress/dist
